--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     </script>
     <script>
     const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
-        manifestUrl: 'https://<YOUR_APP_URL>/tonconnect-manifest.json',
+        manifestUrl: 'https://monday-kelvin.github.io/test_TMA/tonconnect-manifest.json',
         buttonRootId: 'ton-connect'
     });
-</script>
+    </script>
 
     <!-- Eruda is console for mobile browsers -->
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
