--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
+        <button id="signButton" style="display: none;">Sign Transaction</button>
+
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
     <div id="viewport-params-expand"></div>
     <div id="ton-connect"></div>
+    <div id="result"></div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         // Init TWA
@@ -161,6 +164,9 @@
         manifestUrl: 'https://monday-kelvin.github.io/test_TMA/tonconnect-manifest.json',
         buttonRootId: 'ton-connect'
     });
+
+    const signButton = document.getElementById('signButton');
+    const resultDiv = document.getElementById('result');
     </script>
 
     <!-- Eruda is console for mobile browsers -->
