--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
-        <button onclick="signTransaction();">Toggle sign Button</button>
+        <button onclick="toggleMainButton();">Toggle sign Button</button>
 
     </main>
     <div id="viewport"></div>
