--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         Telegram.WebApp.MainButton.show();
 
           var expandEl = document.querySelector('#result');
-            expandEl.innerText = 'hello');
+            expandEl.innerText = 'hello';
         // Function to call showPopup API
         function showPopup() {
             Telegram.WebApp.showPopup({
