--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         });	
         Telegram.WebApp.MainButton.show();
 
-          var expandEl = document.querySelector('#result');
-            expandEl.innerText = 'hello';
+            var s2izeEl = document.getElementById('result');
+            s2izeEl.innerText = 'hello';
         // Function to call showPopup API
         function showPopup() {
             Telegram.WebApp.showPopup({
