--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             pointer-events: none;
             transition: all .2s ease;
         }
+
         #viewport:after {
             content: '';
             display: block;
@@ -42,7 +43,8 @@
         }
 
         #viewport-params-size,
-        #viewport-params-expand {
+        #viewport-params-expand,
+        #result{
             content: attr(text);
             position: absolute;
             display: inline-block;
@@ -58,6 +60,9 @@
         }
         #viewport-params-expand {
             top: 30px;
+        }
+         #result {
+            top: 20px;
         }
     </style>
     <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
