--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         }
 
         #viewport-params-size,
-        #viewport-params-expand {
+        #viewport-params-expand,
+        #result{
             content: attr(text);
             position: absolute;
             display: inline-block;
@@ -58,6 +59,9 @@
         }
         #viewport-params-expand {
             top: 30px;
+        }
+        #result {
+            top: 20px;
         }
     </style>
     <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
