--- a/index.html
+++ b/index.html
@@ -28,16 +28,6 @@
             pointer-events: none;
             transition: all .2s ease;
         }
-
-        #result {
-            position: fixed;
-            left: 0;
-            right: 0;
-            top: 0;
-            height: var(--tg-viewport-stable-height, 100vh);
-            pointer-events: none;
-            transition: all .2s ease;
-        }
         #viewport:after {
             content: '';
             display: block;
@@ -52,7 +42,8 @@
         }
 
         #viewport-params-size,
-        #viewport-params-expand {
+        #viewport-params-expand,
+        #result{
             content: attr(text);
             position: absolute;
             display: inline-block;
@@ -68,6 +59,9 @@
         }
         #viewport-params-expand {
             top: 30px;
+        }
+        #result {
+            top: 20px;
         }
     </style>
     <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
