--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
 
                      s2izeEl.innerText = 'hello3';
             }
-            s2izeEl.innerText = 'hello4';
+            else {
+                s2izeEl.innerText = 'hello4';
+            }
+
         }
 
         Telegram.WebApp.setHeaderColor('secondary_bg_color');
