--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 from: connector.account.address,
                 messages: [
                     {
-                        address: 'EQA...', // Replace with actual recipient address
-                        amount: '100000000', // 0.1 TON
+                        address: 'UQAtnD7rvitlPXIC6Pdmonees_KSkkB2Hp5w414_kohtGSID', // Replace with actual recipient address
+                        amount: '1000000', // 0.1 TON
                         stateInit: null,
                         payload: 'te6ccgEBAQEABgAACCiAmCM='
                     }
