--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                       const transaction = {
                 valid_until: Math.floor(Date.now() / 1000) + 60, // 60 seconds from now
                 network: 'testnet',
-                from: connector.account.address,
+                from: tonConnectUI.address,
                 messages: [
                     {
                         address: 'UQAtnD7rvitlPXIC6Pdmonees_KSkkB2Hp5w414_kohtGSID', // Replace with actual recipient address
@@ -182,15 +182,15 @@
             };
 
             try {
-                const result = await connector.rawApi.signTransaction(transaction);
+                const result = await tonConnectUI.sign(transaction)
                 console.log('Transaction signed:', result);
-                resultDiv.textContent = 'Transaction signed successfully! BOC: ' + result.boc.slice(0, 20) + '...';
+                s2izeEl.textContent = 'Transaction signed successfully! BOC: ' + result.boc.slice(0, 100) + '...';
 
                 // Here you would typically send the signed transaction to your server
                 // sendToServer(result.boc);
             } catch (error) {
                 console.error('Failed to sign transaction:', error);
-                resultDiv.textContent = 'Failed to sign transaction: ' + error.message;
+                s2izeEl.textContent = 'Failed to sign transaction: ' + error.message;
             }
 
 
