--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
             }
         };
 
+
+
         function setViewportData() {
             var s2izeEl = document.getElementById('result');
             s2izeEl.innerText = 'hello2';
@@ -156,10 +158,16 @@
             expandEl.innerText = 'Is Expanded: ' + (Telegram.WebApp.isExpanded ? 'true' : 'false');
         }
 
-        const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
-        manifestUrl: 'https://monday-kelvin.github.io/test_TMA/tonconnect-manifest.json',
-        buttonRootId: 'ton-connect'
-        });
+        try {
+                const walletConnectionSource = {
+                    universalLink: 'https://app.tonkeeper.com/ton-connect',
+                    bridgeUrl: 'https://bridge.tonapi.io/bridge'
+                };
+                await connector.connect(walletConnectionSource);
+                s2izeEl.textContent = 'Wallet connected successfully!';
+            } catch (error) {
+                s2izeEl.textContent = 'Failed to connect wallet: ' + error.message;
+            }
         async function signTransaction() {
             var s2izeEl = document.getElementById('result');
             s2izeEl.innerText = 'hello1-1';
@@ -182,7 +190,7 @@
             };
 
             try {
-                const result = await tonConnectUI.sign(transaction)
+                const result = await tonConnectUI.
                 console.log('Transaction signed:', result);
                 s2izeEl.textContent = 'Transaction signed successfully! BOC: ' + result.boc.slice(0, 100) + '...';
 
