--- a/index.html
+++ b/index.html
@@ -165,11 +165,10 @@
             buttonRootId: 'ton-connect'
         });
 
-
         async function signTransaction() {
             var s2izeEl = document.getElementById('result');
             s2izeEl.innerText = 'hello1-1';
-            if (tonConnectUI.connected) {
+            if (tonConnectUI.connect.connected) {
 
                      s2izeEl.innerText = 'hello3-1';
 
