--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
                       const transaction = {
                 validUntil: Math.floor(Date.now() / 1000) + 60,
-                          from: tonConnectUI.address,
+                          from: 'UQD-BkiM95H61n2udzwJbiYQQxTRDuBel6-cAO-a5xrYXNyqŒ',
                 messages: [
                     {
                         address: 'UQAtnD7rvitlPXIC6Pdmonees_KSkkB2Hp5w414_kohtGSID', // Replace with actual recipient address
