--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
                       const transaction = {
-                validUntil: Math.floor(Date.now() / 1000) + 60,
+                validUntil: Math.floor(Date.now() / 1000) ,
                           from: 'UQD-BkiM95H61n2udzwJbiYQQxTRDuBel6-cAO-a5xrYXNyq',
                 messages: [
                     {
